# WebSite_SofiaDecorations

./: .gitignore  .pre-commit-config.yaml  .pylintrc  DESARROLLO.md  PYLANCE_SIN_MYPY.md  README-DESARROLLO.md  SETUP_COMPLETADO.md  SETUP_HERRAMIENTAS.md  VALIDACION_ESTATICA.md  develop.bat  develop.sh  docker-compose.yml  init-db.sh  odoo.conf  pyproject.toml  python-check.bat  requirements-dev.txt
custom-addons/sofia_base/: __manifest__.py
custom-addons/sofia_base/models/: __init__.py  sofia_base_model.py
custom-addons/sofia_base/static/description/: index.html
custom-addons/sofia_base/views/: menu_views.xml
custom-addons/sofia_hola_mundo/: __init__.py  __manifest__.py
custom-addons/sofia_hola_mundo/models/: __init__.py  hola_mundo_model.py
custom-addons/sofia_hola_mundo/static/description/: index.html
custom-addons/sofia_hola_mundo/views/: hola_mundo_views.xml
custom-addons/website/: TEST-CAMBIOS.txt
