[tool.mypy]
# Configuración para mypy - type checking estático (como C#)
python_version = "3.14"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false

# Odoo no está tipado
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "odoo.*"
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"
